<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MenuLivro">

    <Button
        android:id="@+id/buttonVoltarLivro"
        android:layout_width="336dp"
        android:layout_height="52dp"
        android:layout_marginTop="75dp"
        android:text="@string/voltar_livro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="336dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/listar_livros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="336dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/excluir_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="336dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/alterar_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCadastrarLivro" />

    <Button
        android:id="@+id/buttonCadastrarLivro"
        android:layout_width="336dp"
        android:layout_height="52dp"
        android:layout_marginTop="100dp"
        android:text="@string/cadastrar_livro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>