<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MenuEditora">

    <Button
        android:id="@+id/buttonListarEditora"
        android:layout_width="336dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/listar_editora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/buttonVoltarEditora"
        android:layout_width="336dp"
        android:layout_height="52dp"
        android:layout_marginTop="75dp"
        android:text="@string/voltar_editora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonListarEditora" />

    <Button
        android:id="@+id/button7"
        android:layout_width="336dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/excluir_editora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="336dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/alterar_editora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMenuCadastrarEditora" />

    <Button
        android:id="@+id/buttonMenuCadastrarEditora"
        android:layout_width="336dp"
        android:layout_height="52dp"
        android:layout_marginTop="100dp"
        android:text="@string/cadastrar_editora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>